Add DELETE /submissions, require Maven version 3.9.9, fix Docker Image build command in README.md
