# openapi.yaml
@@ -71,6 +71,19 @@ paths:
           $ref: '#/components/responses/500InternalServerError'
         'default':
           $ref: '#/components/responses/Default'
+    delete:
+      tags:
+        - submissions
+      summary: Delete submissions
+      description: Deletes all submissions and their associated data.
+      operationId: deleteSubmissions
+      responses:
+        '204':
+          description: Submissions deleted successfully.
+        '500':
+          $ref: '#/components/responses/500InternalServerError'
+        'default':
+          $ref: '#/components/responses/Default'
 
   /submissions/{submissionId}:
     get:
@@ -177,7 +190,7 @@ components:
       schema:
         type: integer
         format: int64
-        description: ID of the file.
+        description: ID of the submission file.
         minimum: 1
         example: 1
 
